--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-portfolio</title>
+    <title>Navya's Portfolio</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
-  <body>
+  <body class="bg-gray-900 text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
